--- a/Stats.html
+++ b/Stats.html
@@ -36,10 +36,8 @@
     </section>
 
     <section class="stats">
-       <centre> <iframe width="600" height="371" seamless frameborder="0" scrolling="no"
-            src="https://docs.google.com/spreadsheets/d/e/2PACX-1vStUB7H7oxHI6cgBxSPwqdIIgjfeKsn1hC1X72_qlpijvW8EmCfxcfh0dCqMtCj__7kjNEtofk2SSLh/pubchart?oid=781461287&amp;format=interactive"></iframe>
-            <iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vStUB7H7oxHI6cgBxSPwqdIIgjfeKsn1hC1X72_qlpijvW8EmCfxcfh0dCqMtCj__7kjNEtofk2SSLh/pubchart?oid=1134298473&amp;format=interactive"></iframe>
-            <iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vStUB7H7oxHI6cgBxSPwqdIIgjfeKsn1hC1X72_qlpijvW8EmCfxcfh0dCqMtCj__7kjNEtofk2SSLh/pubchart?oid=172636418&amp;format=interactive"></iframe>
+       <centre> <iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vStUB7H7oxHI6cgBxSPwqdIIgjfeKsn1hC1X72_qlpijvW8EmCfxcfh0dCqMtCj__7kjNEtofk2SSLh/pubchart?oid=781461287&amp;format=interactive"></iframe>
+            <iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vStUB7H7oxHI6cgBxSPwqdIIgjfeKsn1hC1X72_qlpijvW8EmCfxcfh0dCqMtCj__7kjNEtofk2SSLh/pubchart?oid=2106993193&amp;format=interactive"></iframe>            <iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vStUB7H7oxHI6cgBxSPwqdIIgjfeKsn1hC1X72_qlpijvW8EmCfxcfh0dCqMtCj__7kjNEtofk2SSLh/pubchart?oid=172636418&amp;format=interactive"></iframe>
             <iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vStUB7H7oxHI6cgBxSPwqdIIgjfeKsn1hC1X72_qlpijvW8EmCfxcfh0dCqMtCj__7kjNEtofk2SSLh/pubchart?oid=1368316828&amp;format=interactive"></iframe>
             <iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vStUB7H7oxHI6cgBxSPwqdIIgjfeKsn1hC1X72_qlpijvW8EmCfxcfh0dCqMtCj__7kjNEtofk2SSLh/pubchart?oid=1192213511&amp;format=interactive"></iframe>
             <iframe width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vStUB7H7oxHI6cgBxSPwqdIIgjfeKsn1hC1X72_qlpijvW8EmCfxcfh0dCqMtCj__7kjNEtofk2SSLh/pubchart?oid=760220847&amp;format=interactive"></iframe></centre>
