--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         function dev() {
             alert("Developers info is loding!!!😶‍🌫️");
         }
-        
+
     </script>
 </head>
 
@@ -75,16 +75,29 @@
                     environmentally friendly energy source. By reducing our reliance on fossil fuels, we can reduce our
                     carbon footprint and help combat climate change.</p>
             </div>
+
         </div>
-        
+        <h1>Here are some videos to explain benefits of solar panel</h1>
+        <br><br>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/AmZEqrWccdQ" title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen></iframe>
+        <br><br>
+        <h1>Some videos to explain government subsidies on solar panel</h1>
+        <br><br>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/MnypIJfTdlo" title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen></iframe>
+        <br><br>
     </section>
 
-   
 
     <!-- Footer -->
     <section class="footer">
         <h3>About Us</h3>
-        <p>This is our  webpage.... Made as a project<br> given by:- Dr. Tanmoy kumar Roy</p>
+        <p>This is our webpage.... Made as a project<br> given by:- Dr. Tanmoy kumar Roy</p>
         <p>Made using<br>Using HTML & CSS & JavaScript</p>
     </section>
 
